--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "npm": "^9.5.1",
     "prettier": "^2.8.4",
     "prettier-config-standard": "^5.0.0",
+    "remark-gfm": "^3.0.1",
     "typescript": "^4.5",
     "vue-tsc": "^0.38"
   },
