--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,5 @@
-name: Deploy SRD site to Github pages
+name: Deploy îles site
+
 on:
   push:
     branches:
@@ -8,14 +9,14 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
       - name: Use Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v1
         with:
-          node-version: 16
+          node-version: 16.x
 
-      - uses: pnpm/action-setup@v2
+      - uses: pnpm/action-setup@v1.2.1
         with:
           version: 6.10.3
           run_install: |
