--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "prettier": "^2.8.4",
     "prettier-config-standard": "^5.0.0",
     "remark-gfm": "^3.0.1",
+    "sass": "^1.58.3",
     "typescript": "^4.5",
     "vue-tsc": "^0.38"
   },
   "dependencies": {
+    "@inkline/inkline": "^3.2.2",
     "@kor-ui/kor": "^1.11.3"
   }
 }
