--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "starforged-srd",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "iles dev --open",
-    "build": "iles build",
-    "preview": "iles preview --open --port 5050",
-    "typecheck": "vue-tsc --noEmit"
-  },
-  "engines": {
-    "node": "^14.18 || >= 16.0.0"
-  },
-  "devDependencies": {
-    "@islands/headings": "^0.8.2",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-config-standard-with-typescript": "^34.0.0",
-    "i": "^0.3.7",
-    "iles": "^0.8.7",
-    "npm": "^9.5.1",
-    "prettier": "^2.8.4",
-    "prettier-config-standard": "^5.0.0",
-    "remark-gfm": "^3.0.1",
-    "sass": "^1.58.3",
-    "typescript": "^4.5",
-    "vue-tsc": "^0.38"
-  },
-  "dependencies": {
-    "@inkline/inkline": "^3.2.2",
-    "@kor-ui/kor": "^1.11.3"
-  }
+	"name": "starforged-srd",
+	"type": "commonjs",
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "iles dev --open",
+		"build": "iles build",
+		"preview": "iles preview --open --port 5050",
+		"typecheck": "vue-tsc --noEmit"
+	},
+	"engines": {
+		"node": "^14.18 || >= 16.0.0"
+	},
+	"devDependencies": {
+		"@islands/headings": "^0.8.2",
+		"eslint-config-prettier": "^8.6.0",
+		"eslint-config-standard-with-typescript": "^34.0.0",
+		"i": "^0.3.7",
+		"iles": "^0.8.7",
+		"npm": "^9.5.1",
+		"prettier": "^2.8.4",
+		"prettier-config-standard": "^5.0.0",
+		"remark-gfm": "^3.0.1",
+		"sass": "^1.58.3",
+		"typescript": "^4.5",
+		"vue-tsc": "^0.38"
+	},
+	"dependencies": {
+		"@inkline/inkline": "^3.2.2"
+	}
 }
