--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
 		"@islands/headings": "^0.8.2",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-config-standard-with-typescript": "^34.0.0",
-		"i": "^0.3.7",
 		"iles": "^0.8.7",
 		"npm": "^9.5.1",
 		"prettier": "^2.8.4",
@@ -26,6 +25,6 @@
 		"vue-tsc": "^0.38"
 	},
 	"dependencies": {
-		"@inkline/inkline": "^3.2.2"
+		"vuetify": "^3.1.6"
 	}
 }
