--- a/package.json
+++ b/package.json
@@ -1,35 +1,48 @@
 {
 	"name": "starforged-srd",
-	"type": "commonjs",
+	"type": "module",
 	"version": "0.0.0",
 	"scripts": {
 		"dev": "iles dev --open",
 		"build": "iles build",
 		"preview": "iles preview --open --port 5050",
-		"typecheck": "vue-tsc --noEmit"
+		"typecheck": "vue-tsc --noEmit",
+		"postinstall": "npx patch-package"
 	},
 	"engines": {
 		"node": "^14.18 || >= 16.0.0"
 	},
 	"devDependencies": {
-		"@islands/headings": "^0.8.2",
-		"eslint-config-prettier": "^8.6.0",
-		"eslint-config-standard-with-typescript": "^34.0.0",
-		"iles": "^0.9.2",
-		"npm": "^9.5.1",
-		"prettier": "^2.8.4",
-		"prettier-config-standard": "^5.0.0",
-		"remark-gfm": "^3.0.1",
-		"sass": "^1.58.3",
-		"typescript": "^4.5",
-		"vue-tsc": "^0.38"
-	},
-	"dependencies": {
 		"@fontsource/encode-sans": "^4.5.10",
 		"@fontsource/exo": "^4.5.11",
-		"agnostic-css": "^1.0.34",
-		"agnostic-vue": "^1.1.3",
-		"rehype-add-classes": "^1.0.0",
-		"vite-plugin-fonts": "^0.7.0"
+		"@islands/headings": "^0.8.2",
+		"@types/css-tree": "^2.3.1",
+		"@types/prettier": "^2.7.2",
+		"css-tree": "^2.3.1",
+		"eslint-config-prettier": "^8.6.0",
+		"eslint-config-standard-with-typescript": "^34.0.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-n": "^15.6.1",
+		"eslint-plugin-promise": "^6.1.1",
+		"hast-util-select": "^5.0.5",
+		"iles": "^0.9.2",
+		"open-props": "^1.5.5",
+		"postcss-html": "^1.5.0",
+		"postcss-preset-env": "^8.0.1",
+		"postcss-use": "^3.0.0",
+		"prettier": "^2.8.4",
+		"prettier-config-standard": "^5.0.0",
+		"rehype-slug": "^5.1.0",
+		"remark-gfm": "^3.0.1",
+		"stylelint": "^15.2.0",
+		"stylelint-config-concentric-order": "^5.1.0",
+		"stylelint-config-html": "^1.1.0",
+		"stylelint-config-recommended-vue": "^1.4.0",
+		"stylelint-config-standard": "^30.0.1",
+		"stylelint-declaration-strict-value": "^1.9.2",
+		"stylelint-use-logical-spec": "^5.0.0",
+		"stylelint-use-nesting": "^4.0.0",
+		"typescript": "^4.5",
+		"vue-tsc": "^0.38"
 	}
 }
